# RISCV-Simulator

./: .gitmodules  LICENSE  NAMING_RULES.md  README.md
simulator/: .clang-format  CMakeLists.txt  fib.out  print.out  rvsim.cpp  simulator.cpp  test.out
simulator/argparser/: CMakeLists.txt  parser.cpp  parser.h  parser.hpp
simulator/codegen/: CMakeLists.txt  generate.py
simulator/common/: CMakeLists.txt  config.h  constants.h  macros.h
simulator/common/utils/: bit_ops.cpp  bit_ops.h  cache.h  stack.h
simulator/cosimulation/: CMakeLists.txt  cosim.cpp  cosimulation.cpp
simulator/elf_loader/: CMakeLists.txt  elf_loader.cpp  elf_loader.h
simulator/examples/: 8queens.c
simulator/hart/: CMakeLists.txt  basic_block.cpp  basic_block.h  basic_block_cache.h  basic_block_manager.cpp  basic_block_manager.h  csr.def  csr.h  decoder.cpp  exception.h  exception_handler.cpp  exception_handler.h  execute.cpp  hart.cpp  hart.h  vpt.h
simulator/hart/instruction/: instruction.h  instruction_exec.cpp  instruction_exec.h  instruction_exec_inl.h  instruction_id.h
simulator/instruction/: CMakeLists.txt  instruction.cpp  instruction.h  instruction_decode.cpp  instruction_exec.cpp  instruction_exec.h  instruction_id.h
simulator/instruction/codegen/: generate.py  risc-v.yaml
simulator/memory/: CMakeLists.txt  memory.h  memory_controller.h  pages_controller.h
simulator/mmu/: CMakeLists.txt  mmu.cpp  mmu.h  tlb.cpp  tlb.h
simulator/plugin/: CMakeLists.txt  plugin.cpp  plugin.h  plugin_handler.cpp  plugin_handler.h
simulator/sim_jit/: CMakeLists.txt  sim_compiler.cpp  sim_compiler.h  sim_generator.cpp  sim_generator.h
simulator/simulator/: CMakeLists.txt  elf_loader.cpp  elf_loader.h  simulator.cpp  simulator.h
simulator/supervisor/: CMakeLists.txt  elf_loader.cpp  elf_loader.h  exception_handling.cpp  supervisor.cpp  supervisor.h  vpt.h
simulator/tests/: CMakeLists.txt  main.cpp
simulator/tests/common/: stack_test.cpp
simulator/tests/memory/: memory_test.cpp
simulator/tests/mmu/: mmu_test.cpp
